--- a/Final.html
+++ b/Final.html
@@ -2,10 +2,39 @@
 <html>
 <head>
 	<title>Final Project</title>
+	<link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>
+	<style type= "text/css">
+
+		body{
+				text-align:center;
+				background-color: #F5FFFA;
+
+		}
+
+		h1{
+				font-family: 'Cinzel Decorative', cursive;
+				background-color: #00BFFF;
+		}
+
+		p{
+				font-family: 'Quattrocento', serif;
+				background-color: #00BFFF;
+		}
+	</style>
 </head>
 <body>
-	<h1><u>Study Blue</u></h1>
+	<h1><u>Study Blue</u></h1><br />
 
-	<p>Study Blue is a very useful tool for all college and highschool students. Its main focus is how 
+	<img src="https://www.studyblue.com/css/images/webprintLogo.jpg" width= "420px"><br /><br />
+
+	<p><br />
+	Study Blue is a very useful tool for all college and highschool students. There are many useful tools on this app and makes the perfect tool for studying for finals or tests. Its main focus is studying vocabulary and to reach 100% accuracy. There are many ways to reach this accuracy, including flipping note cards, quizzes, and review sheets. But not only are there personal note cards available, there are others that are available for someone to look at themself. 
+	<br /><br />
+
+	Study Blue has a very helpful way to study vocabulary. While it may seem simple, it truly helps 
+	</p>
+
 </body>
 </html>
