--- a/final.html
+++ b/final.html
@@ -9,25 +9,35 @@
 		body{
 				text-align:center;
 				background-color: #F5FFFA;
+				border-style: double;
+				border-width: 20px;
+				border-color: #00BFFF;
+				border-spacing: 50px;
+
 		}
 
 		h1{
 				font-family: 'Cinzel Decorative', cursive;
 				background-color: #00BFFF;
-				font-size: 45px;
+				font-size: 60px;
 				text-align: center;
+				border-style: outset;
+				border-color: black;
 		}
 
 		p{
 				font-family: 'Quattrocento', serif;
 				background-color: #00BFFF;
-				
+				border-style: outset;
+				border-color: black;
+				font-size: 30px;
 		}
 
 		button{
 				font-family: 'Quattrocento', serif;
 				background-color: #00BFFF;
 				border-color: black;
+				border-style: outset;
 		}
 
 	</style>
@@ -44,7 +54,11 @@
 	Study Blue has a very helpful way to study vocabulary. While it may seem old fashioned, it truly helps with learning vocabulary. It is very easy to make notecards in Study Blue. Everything on the website is straighforward and simple. On the side bar once you sign in, it says make cards. With this, a set of blank cards is created. Starting with the first card, it is very easy to add more cards to take some away. All of the instructions are written on the side of the note card. Also, there are suggestions of the other side of the notecard. Study Blue provides definitions for the word being typed on the side. It is not required to choose from there, but it is helpful. Underneath that it says upload notes. This means that you can upload notes from Study Blue and keep them on your computer, phone or tablet. There is also an option to create folders to organize the notecards. The other option is to have everything in an unfiled folder. Of course, all of the notecards will be in sets, so it will still be organized. 
 	<br /><br />
 
-	Another tool on Study Blue is the quiz. Once a set of vocabulary is created, the 
+	Another tool on Study Blue is the quiz. Once a set of vocabulary is created, there is an option to make a quiz. Study Bue will create the quiz for you. There are multiple choice questions, fill in the blanks, and others. This tool is very useful and helps as a pretest before you take an actual test. Also, there is a option to print out the notecards. This is helpful because you can have them and quiz people with them without actually taking the notes. Another option for Study Blue is uploading notes. The notes can be take from your computer and put into Study Blue. <br /><br />
+
+	I use study blue on my own to study for many tests, quizzes, and finals. Whether it is for a simple quiz or a major final, Study Blue helps me learn vocabulary easily. The flashcards can be put in different orders that help. These include Hardest to Easiest, Easiest to Hardest, the order you wrote it in, and more. There are even options for me to take the notes from other people and use them. <br /><br />
+
+	Study Blue is a very resourceful app which can help all ages, young to old. Highschool and college students should make use of this tool more. This app can help with almost everything you need to be ready for a test. 
 	</p>
 
 	<button onclick="window.location.href='https://www.studyblue.com/'">Study Blue</button>
